# ERROR_MATE

./: .gitignore  README.md  pyproject.toml  requirements.txt
errormate/: ai_explainer.py  error_classifier.py  error_explainer.py  framework_detector.py  main.py  popup_viewer.py  runner.py  terminal.py
errormate/detectors/: __init__.py  django.py  dotnet.py  express.py  fastapi.py  laravel.py  nestjs.py  nextjs.py  node.py  react.py  spring.py
errormate/patterns/: __init__.py  common_patterns.py  dotnet_patterns.py  java_patterns.py  node_patterns.py  php_patterns.py  python_patterns.py
errormate/utils/: __init__.py  file_utils.py  output_formatter.py
tests/: test_error_classifier.py  test_framework_detector.py  test_runner.py
